# bomchess

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  design.md
include/: board.h  boardbuilder.h  color.h  game.h  move.h  movegen.h  piece.h  position.h  square.h
src/: board.cpp  boardbuilder.cpp  game.cpp  move.cpp  movegen.cpp  piece.cpp  position.cpp  square.cpp
test/: board_tests.cpp  color_tests.cpp  move_tests.cpp  piece_tests.cpp  position_tests.cpp  square_tests.cpp
